CSS Box Model + pequenas mudanças no CSS principal e arquivos aleatórios
Informações sobre como funciona o modelo de caixa do CSS.
Além disso, tirei o seletor universal do arquivo CSS, pois ele, literalmente, adiciona a propriedade em tudo, incluindo imagens (foi por causa delas que tirei).
Interessante:
- Para saber o comprimento total de um elemento some seu padding, margem e border direita e esquerda com seu width.
- Para saber a altura total de um elemento some seu padding, margem e border superior e inferior com seu height.

--- a/_css/geral-link.css
+++ b/_css/geral-link.css
@@ -19,8 +19,10 @@ div#link {
 
 p {
     font-size: 12pt;
+    text-indent: 20pt;
+    
 }
 
-* {
+h1, h2, h3, h4, h5, h6 {
     text-indent: 20pt;
 }
