CSS Google Fonts
Informações sobre como pegar fontes do Google e colocar em seu documento usando o CSS.
Além disso, fiz uma pequena alteração no arquivo CSS geral que tem o link. Foi para tentar tornar o site mais responsivo.

Interessante:
- Site para adicionar efeitos no texto: <https://developers.google.com/fonts/docs/getting_started>;
- Quando você adiciona mais de uma fonte de vez o link só faz adicionar "&family=nome+da+fonte" antes do "&display=swap";
- Você adiciona efeitos a um elemento colocando class="font-effect-nome-do-efeito" e colocando a "font-family: ;" na div que contem o elemento;
- Quando for adicionar efeitos, apague o 2 que vem depois do css no link e o &display=swap;
- Quando for adicionar mais de um efeito, coloque "|" e o nome do efeito ao lado (se for o nome for comporto por mais de uma palavra, separe por -).

Dúvida:
- Por que não consegui fazer o @import funcionar?

--- a/_css/geral-link.css
+++ b/_css/geral-link.css
@@ -3,12 +3,13 @@
 body {
     background-color: #78b4e3;
     font-family: Arial;
+    font-size: 100%;
 }
 
 div#explicacao {
     background-color: azure;
     margin: -8px auto 50px auto;
-    max-width: 850px;
+    max-width: 65vw;
     padding: 20px;
     min-height: 700px;
 }
