CSS Great Font Pairings
Informações sobre bons pares de fontes no CSS.
Além disso, fiz uma pequena alteração no arquivo CSS geral que tem o link. Foi para tentar tornar o site mais responsivo.

--- a/_css/geral-link.css
+++ b/_css/geral-link.css
@@ -8,10 +8,10 @@ body {
 
 div#explicacao {
     background-color: azure;
-    margin: -8px auto 50px auto;
+    margin: -8px auto 10vw auto;
     max-width: 65vw;
     padding: 20px;
-    min-height: 700px;
+    min-height: 60vw;
 }
 
 div#link {
