Organização do código CSS
A partir daqui, se eu quiser deixar algum trecho em negrito, basta usar: <span class="bold"> e se eu quiser destacar algo que fiquei em dúvida, basta usar <span class="doubt">. Eu fiz essas mudanças nos arquivos que se encaixavam nesses casos.

Não sei se é o mais adequado a se fazer, mas por enquanto será assim.

--- a/_css/geral-link.css
+++ b/_css/geral-link.css
@@ -27,3 +27,15 @@ p {
 h1, h2, h3, h4, h5, h6 {
     text-indent: 20pt;
 }
+
+ul {
+    list-style-type: circle;
+}
+
+span.bold {
+    font-weight: bold;
+}
+
+span.doubt {
+    color: steelblue;
+}
