CSS Position - Part 1
Informações sobre posições de elementos no CSS.
Além disso, adicionei outra class para o span no CSS. A partir daqui, se tiver algum trecho que eu não tenho certeza se o que estou dizendo está certo, basta usar: <span class="notsure"> para destacar o trecho.

Interessante
- Para poder usar propriedades como "right: ;", "left: ;", "top: ;" e "bottom: ;" defina algum valor para o "position: ;".

--- a/_css/geral-link.css
+++ b/_css/geral-link.css
@@ -36,6 +36,13 @@ span.bold {
     font-weight: bold;
 }
 
+/*Use a propriedade a seguir para trechos que você ficou em dúvida por não ter entendido bem*/
 span.doubt {
     color: steelblue;
+}
+
+/*Use a propriedade a seguir para trechos não sabe se o que você está dizendo é certo.*/
+span.notsure {
+    color: navy;
+    font-weight: bold;
 }
