CSS Layout - The z-index Property
Informações sobre como manipular o eixo z dos elementos no CSS.
Interessante:
- A ordem de sobreposição do elementos que não tem valor definido na propriedade "z-index: ;" é com base na ordem deles no HTML. É do último para o primeiro (o último irá sobrepor todos os anteriores, o penúltimo irá sobrepor todos os anteriores, etc.);
- A propriedade "z-index: ;" também aceita valores negativos. Ela funciona como "camadas", onde a maior sobrepõe a menor.

--- a/_css/geral-link.css
+++ b/_css/geral-link.css
@@ -7,11 +7,13 @@ body {
 }
 
 div#explicacao {
+    position: relative;
     background-color: azure;
     margin: -8px auto 10vw auto;
     max-width: 65vw;
     padding: 20px;
     min-height: 60vw;
+    z-index: -1;
 }
 
 div#link {
@@ -21,7 +23,6 @@ div#link {
 p {
     font-size: 12pt;
     text-indent: 20pt;
-    
 }
 
 h1, h2, h3, h4, h5, h6 {
