CSS Align - Part 1
Informações sobre alinhamentos de elementos no CSS.
Não conclui o arquivo porque tem partes que envolvem coisas que ainda não estudei.
Além disso, a partir daqui, se o W3schools ensinar a fazer algo com coisas que ele não explicou ainda, eu vou registrar usando o <span class="seeya"> e depois retorno e faço.
Interessante:
- Quando quiser centralizar uma imagem, transforme-a em um bloco antes;
- Acho que deve-se usar o clearfix hack num elemento que usar float;
- "line-height: ;" aparentemente é espaçamento entre linhas. É possível usar isso para deixar um texto no centro, basta colocar nela o mesmo valor da height. Porém, se tiver mais de uma linha você deve adicionar "line-height: ;", "display: inline-block;" e "vertical-align: middle;" para o elemento que contem o texto.

Dúvida:
- Eu realmente não consigo entender o motivo de "height: fit-content;" não funcionar quando o elemento-filho tem "position: absolute;". Já tentei muita coisa, mas não consegui.

--- a/_css/css-position.css
+++ b/_css/css-position.css
@@ -15,10 +15,7 @@ div.template {
 div.template2 {
     position: relative;
     border: 4px solid green;
-    margin-bottom: auto;
-    margin-top: auto;
-    margin-right: auto;
-    margin-left: auto;
+    margin: auto;
     height: 58vw;
     width: 58vw;
     padding: 5px;
