--- a/_css/css-pseudo-classes.css
+++ b/_css/css-pseudo-classes.css
@@ -5,7 +5,7 @@ div.example4, div.example6 {
     border: 4px solid salmon;
 }
 
-/* Second div*/
+/* Second div */
 div.container1 {
     border: 4px solid steelblue;
 }
@@ -76,7 +76,7 @@ div.example4 p:first-child  {
     padding: 5px;
 }
 
-p:first-child i {
+div.example5 p i:first-child, div.example6 p:first-child i {
     color: lightseagreen;
     text-decoration: underline;
 }
