CSS Float - Final Part
Informações sobre flutuação de elementos no CSS.
Interessante:

- Você pode criar caixas com comprimentos iguais caso use porcentagem para definir o comprimento do elemento. Exemplo: 3 blocos, logo "width: 33.33%";
- Use "box-sizing: border-box;" quando quiser garantir que o comprimento total daquele elemento não seja maior do que devia só por você ter adicionado padding ou bordas. Não usá-los pode fazê-lo quebrar para a próxima linha. Basicamente, use-o quando quiser garantir que aquele elemento vai caber no lugar que você quer que caiba;
- Quando quiser colocar vários elementos alinhados, você pode usar float;
- Você pode fazer aquele efeito em que a letra inicial de um texto fica a esquerda e diferente das outras usando o "float: left;";
- Até onde entendi, use o "clearfix" quando você utilizar float num elemento-filho que você quer que ele caiba/permaneça dentro de um elemento-pai;
- O clearfix é:
container {
  content: "";
  clear: both;
  display: table;
}

Descobri enquanto fazia:
- Quando for criar barras de navegação, coloque o padding na tag "a";
- Você não é obrigado a colocar o hover como último "elemento" da sintaxe, pode vir um elemento depois;
- O hover não vai ser ativado se configurar algo, envolvendo o elemento que o hover irá funcionar, a seguir, porém é necessário que eles tenham o mesmo "caminho", exemplo:
*Certo:
div.example img4:hover {}
div.example img4 {}
*Errado:
div.example img4:hover {}
img4 {}
- Não sei bem o motivo, mas o único jeito que sei até agora de fazer a tag "ul" envolver o seu conteúdo quando o float foi utilizado nas tag "li" é colocando "overflow: hidden;" como uma de suas propriedades;
- Caso queira adicionar espaço entre elementos alinhados, pela a experiência que tive, é bom você colocar cada elemento dentro de um elemento-pai e esse elemento-pai dentro de um elemento-avô e alterar o margin do elemento-filho em relação ao seu elemento-pai.

--- a/_css/css-attr-selectors.css
+++ b/_css/css-attr-selectors.css
@@ -71,11 +71,10 @@
     border-radius: 12px;
 }
 
-img [title$="bigger"] {
-    outline:sienna;
-    padding: 30px;
+[title$="bigger"] {
+    background-color: navy;
 }
 
-.attribute5 img [title*="stone"] {
-    padding: 40px;
+.attribute5 [title*="stone"] {
+    background-color: navy;
 }
