CSS Attribute Selectors - Obs.
Informações sobre selecionadores de atributos no CSS.
Interessante/descobri enquanto fazia:

- [attribute="value"] - Seleciona elementos com um atributo e valor específico; Exemplos: [target="_blank"], [type="text"], etc.;

- [attribute~="value"] - Seleciona elementos com um atributo e palavra específica (separa os nomes por traços irá fazer com que não funcione, separe com espaços); Exemplos: [title~="big"], [title~="bold"], etc.;

* O primeiro exemplo afetaria: title="big" e title="big container";

* Não afetariam: title="big-container" e title="bigcontainer";

- [attribute|="value"] - Seleciona elementos com um atributo começando com um valor específico (se estiver "colado" a outra palavra ou separado por espaços, não funcionará); Exemplos: [title|="big"], [title|="bold"], etc.;

* O primeiro exemplo afetaria: title="big" e title="big-container";

* Não afetariam: title="big container" e title="bigcontainer";

- [attribute^="value"] - Seleciona elementos com um atributo começando com o valor específico (mesmo que esteja junto de outra palavra e separada por espaço ou traço); Exemplos: [title^="big"] e [title^="bold"], etc.;

* O primeiro exemplo afetaria: title="big", title="big-container", title="big container" e title="bigcontainer";

- [attribute$="value"] - Seleciona elementos com um atributo terminando com um valor específico. Exemplos: [title$="big"], [title$="bold"], etc.;

* O segundo exemplo afetaria: title="bold", title="text-bold", title="text bold" e title="textbold";

- [attribute*="value"] - Seleciona elementos com um atributo que contém um valor específico. Ele é bem geral, pode afetar vários elementos. Exemplos: [class*=small], [class*=container], etc.;

* O primeiro exemplo afetaria: class="small", class="small-container", class="small container" e class="smallcontainer";

--- a/_css/css-attr-selectors.css
+++ b/_css/css-attr-selectors.css
@@ -71,7 +71,7 @@
     border-radius: 12px;
 }
 
-.attribute4 [title$="bigger"], .attribute5 [title$="bigger"]  {
+.attribute4 [title$="navy"], .attribute5 [title$="navy"]  {
     background-color: navy;
     border-radius: 12px;
 }
@@ -100,4 +100,9 @@
 
 .attribute5 input[type="button"] {
     background-color: steelblue;
+}
+
+span.bold2 {
+    font-weight: bold;
+    color: midnightblue;
 }
